testsuite/tests/flambda/to_cmm_reordering_control_flow_3.reference
Fatal error: exception Assert_failure("to_cmm_reordering_control_flow_3.ml", 21, 49)
